fix: correct form alignment to page center

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,8 +4,8 @@
   background-color: #FFFFFF;
   border-radius: 10px;
   position: fixed;
-  top: calc(50% - 215px);
-  left: calc(50% - 165px);
+  left: calc(50% - 215px);
+  top: calc(50% - 165px);
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   display: none;
 }
@@ -14,7 +14,7 @@
   .popup {
     width: 282px;
     height: 322px;
-    top: calc(50% - 161px);
     left: calc(50% - 141px);
+    top: calc(50% - 161px);
   }
 }
